# Kidney-Disease-Classification

./: .gitignore  Dockerfile  README.md  app.py  dvc.yaml  main.py  pyproject.toml  requirements.txt  template.py
.dvc/: config
config/: config.yaml
flask_app/: app.py  requirements.txt
flask_app/templates/: index.html
research/: 01_data_ingestion.ipynb  02_prepare_base_model.ipynb  03_model_training.ipynb  04_model_evaluation.ipynb  trails.ipynb
results/: scores.json
src/cnnClassifier/: __init__.py  common.py
src/cnnClassifier/components/: data_ingestion.py  model_evaluation.py  model_training.py  prepare_base_model.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/connections/: s3_connection.py
src/cnnClassifier/entity/: config_entity.py
src/cnnClassifier/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_training.py  stage_04_model_evaluation.py
src/cnnClassifier/utils/: common.py
templates/: index.html
